--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="signin/signin.module.js"></script>
-  <script src="signin/signin.component.js"></script>
+  <script src="signup/signup.module.js"></script>
+  <script src="signup/signup.component.js"></script>
   <script src="login/login.module.js"></script>
   <script src="login/login.component.js"></script>
   <script src="home/home.module.js"></script>
